<resources>
    <string name="app_name">Pass the Jams</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_network_list">NetworkListActivity</string>

    <string name="hello_world">Hello world!</string>

    <string name="drawer_open">Open</string>

    <string name="drawer_close">Close</string>
    <string name="QueueTitle">Queue</string>
    <string name="LastFmTitle">Last Fm</string>
    <string name="AddToQueue">Add to Queue</string>
    <string name="AddToPlaylist">Add to Playlist</string>
    <string name="ExampleSong">Example Song</string>
    <string name="NetworkTitle">Network Devices</string>
    <string name="ExampleAlbum">Example Album</string>
    <string name="ExampleArtist">Example Artist</string>
    <string name="NowPlaying">Now Playing</string>
    <string name="ExamplePlaylist">example Playlist</string>
    <string name="expanded">I\'m the expanded notification.\nCollapse me!</string>
    <string name="collapsed">I\'m the collapsed notification.\nCreated at: %s</string>
    <string name="show_notification">Show Notification</string>
    <string name="custom_notification">I\'m a custom notification.</string>
    <string name="playnext">Play Next</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_theme">Theme</string>
    <string name="theme_passthejams">Theme</string>
    <string name="title_activity_settings">Settings</string>
    <string name="Settings_General">General</string>


    <!-- Strings related to Settings -->
    <string name="Tabs_Albums">Albums Tab</string>
    <string name="Tabs_Albums_Off">The Albums tab is not visible</string>
    <string name="Tabs_Albums_On">The Albums tab is currently visible</string>

    <string name="Tabs_Songs">Songs Tab</string>
    <string name="Tabs_Songs_Off">The Songs tab is not visible</string>
    <string name="Tabs_Songs_On">The Songs tab is currently visible</string>

    <string name="Tabs_Artists">Artists Tab</string>
    <string name="Tabs_Artists_Off">The Artists tab is not visible</string>
    <string name="Tabs_Artists_On">The Artists tab is currently visible</string>

    <string name="Tabs_Playlists">Playlists Tab</string>
    <string name="Tabs_Playlists_Off">The Playlists tab is not visible</string>
    <string name="Tabs_Playlists_On">The Playlists tab is currently visible</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_header_theming">Theming</string>
    <string name="pref_theme">Theme</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search Library</string>
</resources>
